--- a/links.html
+++ b/links.html
@@ -58,6 +58,7 @@
   <p>
     <a href="http://www.ebay.co.uk/" target="_blank">eBay</a> |
     <a href="http://www.moneysavingexpert.com/shopping/local-ebay-deals/" target="_blank">eBay Local Deals</a> |
+    <a href="http://ebook-hunter.org/" target="_blank">ebook hunter</a> |
     <a href="http://www.ebuyer.com/" target="_blank">ebuyer</a> |
     <a href="https://www.etoro.com/portfolio" target="_blank">etoro</a> (
     <a href="https://www.etoro.com/discover/markets/cryptocurrencies" target="_blank">crypto</a>)
