--- a/links.html
+++ b/links.html
@@ -32,7 +32,7 @@
     <a href="http://www.123reg.co.uk/" target="_blank">123 Reg</a>
   </p>
   <p>
-    <a href="http://smile.amazon.co.uk" target="_blank">Amazon</a><span style="background-color:transparent"> | 
+    <a href="https://www.amazon.co.uk/" target="_blank">Amazon</a><span style="background-color:transparent"> | 
     <a href="http://www.autosport.com/f1/ target="_blank">Autosport - F1</a>
   </p>
   <p>
@@ -45,15 +45,9 @@
   </p>
   <p>
     <a href="http://www.caterallen.co.uk/" target="_blank">Cater Allen</a> |
-    <a href="https://cesmohub.com" target="_blank">CESMO</a> |
     <a href="http://www.classicfm.co.uk/Default.asp" target="_blank">Classic fm</a> |
     <a href="http://www.companieshouse.gov.uk/" target="_blank">Companies House</a> |
-    <a href="http://companycheck.co.uk/" target="_blank">Company Check</a> |
     <a href="http://www.contractoruk.com" target="_blank">Contractor UK</a>
-  </p>
-  <p>
-    <a href="https://darksky.net/forecast/52.3333,-2.2322/uk224/en" target="_blank">Dark Sky</a> |
-    <a href="http://www.dmxdimension.com/" target="_blank">Dell Special Offers</a>
   </p>
   <p>
     <a href="http://www.ebay.co.uk/" target="_blank">eBay</a> |
@@ -137,8 +131,6 @@
     <a href="https://www.reddit.com/r/popular" target="_blank">popular</a> )
   </p>
   <p>
-    <a href="http://www.snoop4companies.co.uk/" target="_blank">Snoop4 Company Information</a> | 
-    <a href="https://news.sky.com/watch-live" target="_blank">Sky News</a> |
     <a href="https://www.skysports.com/f1/schedule-results" target="_blank">sky f1 schedule</a> | 
     <a href="http://www.spamcop.net/mcgi?action=loginform;returnurl=/" target="_blank">Spam Cop</a> | 
     <a href="http://www.stourportonsevernpistolnrifleclub.co.uk/" target="_blank">Stourport Pistol &amp; Rifle Club</a>
@@ -149,7 +141,6 @@
     <a href="http://www.telegraph.co.uk/" target="_blank">The Telegraph</a> |
     <a href="https://complaints.tpsonline.org.uk/consumer/complaint" target="_blank">TPS</a> |
     <a href="https://www.trustnet.com/" target="_blank">Trustnet</a> |
-    <a href="http://www.tvguide.co.uk/" target="_blank">TV Guide</a> |
     <a href="https://twitter.com/search-home" target="_blank">Twitter Search</a>
   </p>
   <p>
@@ -158,7 +149,7 @@
     <a href="https://www.google.com/search?as_sitesearch=www.uk-preppers.co.uk/forum" target="_blank">search</a>)
   </p>
   <p>
-    <a href="http://my.viewranger.com" target="_blank">ViewRanger</a>
+    <a href="https://www.radiotimes.com/tv/tv-listings/" target="_blank">Radio Times</a> (
   </p>
   <p>
     <a href="http://www.wikipedia.org" target="_blank">Wikipedia</a>
