--- a/links.html
+++ b/links.html
@@ -54,8 +54,8 @@
     <a href="http://www.moneysavingexpert.com/shopping/local-ebay-deals/" target="_blank">eBay Local Deals</a> |
     <a href="http://ebook-hunter.org/" target="_blank">ebook hunter</a> |
     <a href="http://www.ebuyer.com/" target="_blank">ebuyer</a> |
-    <a href="https://www.etoro.com/portfolio" target="_blank">etoro</a> (
-    <a href="https://www.etoro.com/discover/markets/cryptocurrencies" target="_blank">crypto</a>)
+    <a href="https://www.etoro.com/portfolio" target="_blank">etoro</a> 
+        (<a href="https://www.etoro.com/discover/markets/cryptocurrencies" target="_blank">crypto</a>)
   </p>
   <p>
     <a href="http://www.facebook.com/" target="_blank">Facebook</a>
@@ -64,23 +64,23 @@
     <a href="https://www.giffgaff.com/" target="_blank">giffgaff</a> |
     <a href="https://github.com/greenfieldcomputers" target="_blank">github</a> |
     <a href="http://www.gateway.gov.uk/" target="_blank">Government Gateway</a> |
-    <a href="http://www.google.co.uk/" target="_blank">Google</a> (
-    <a href="https://play.google.com/books" target="_blank">Books</a>, 
-    <a href="https://contacts.google.com/" target="_blank">Contacts</a>, 
-    <a href="https://www.google.com/calendar" target="_blank">Calendar</a>,
-    <a href="https://www.google.com/android/devicemanager" target="_blank">Device Manager</a>,
-    <a href="https://drive.google.com/" target="_blank">Drive</a> [
-    <a href="https://docs.google.com/document/d/1cWEcjrwn5yK5-rsIlKOlNJDAfJZpruIJGW8K3seGpv0" target="_blank">Contacts</a>, 
-    <a href="https://docs.google.com/document/d/1ma1i0UJjnwP9F_qJ7L9VBTxZWVbPbeV4-PlcrgZ1dyw" target="_blank">TODO</a>], 
-    <a href="https://www.google.co.uk/finance" target="_blank">Finance</a>, 
-    <a href="https://keep.google.com" target="_blank">Keep</a>, 
-    <a href="http://maps.google.co.uk" target="_blank">Maps</a> [
-    <a href="https://www.google.com/maps/dir/?api=1&amp;origin=DY11+7LD&amp;destination=GL51+6SX&amp;travelmode=driving" target="_blank">Stav</a>, 
-    <a href="https://www.google.com/maps/dir/?api=1&origin=DY11+7LD&destination=OX18+3FX&travelmode=driving" target="_blank">Cart</a>, 
-    <a href="https://www.google.com/maps/dir/?api=1&origin=DY11+7LD&destination=54.0958889,-0.2023889&travelmode=driving" target="_blank">Brid</a>, 
-    <a href="https://www.google.com/maps/dir/?api=1&amp;origin=DY11+7LD&amp;destination=HR6+8UQ&amp;travelmode=driving" target="_blank">Leom</a>], 
-    <a href="https://news.google.co.uk/" target="_blank">News</a>, 
-    <a href="http://photos.google.com" target="_blank">Photos</a>) |
+    <a href="http://www.google.co.uk/" target="_blank">Google</a> 
+        (<a href="https://play.google.com/books" target="_blank">Books</a>, 
+        <a href="https://contacts.google.com/" target="_blank">Contacts</a>, 
+        <a href="https://www.google.com/calendar" target="_blank">Calendar</a>,
+        <a href="https://www.google.com/android/devicemanager" target="_blank">Device Manager</a>,
+        <a href="https://drive.google.com/" target="_blank">Drive</a> 
+            [<a href="https://docs.google.com/document/d/1cWEcjrwn5yK5-rsIlKOlNJDAfJZpruIJGW8K3seGpv0" target="_blank">Contacts</a>, 
+            <a href="https://docs.google.com/document/d/1ma1i0UJjnwP9F_qJ7L9VBTxZWVbPbeV4-PlcrgZ1dyw" target="_blank">TODO</a>], 
+        <a href="https://www.google.co.uk/finance" target="_blank">Finance</a>, 
+        <a href="https://keep.google.com" target="_blank">Keep</a>, 
+        <a href="http://maps.google.co.uk" target="_blank">Maps</a> 
+            [<a href="https://www.google.com/maps/dir/?api=1&amp;origin=DY11+7LD&amp;destination=GL51+6SX&amp;travelmode=driving" target="_blank">Stav</a>, 
+            <a href="https://www.google.com/maps/dir/?api=1&origin=DY11+7LD&destination=OX18+3FX&travelmode=driving" target="_blank">Cart</a>, 
+            <a href="https://www.google.com/maps/dir/?api=1&origin=DY11+7LD&destination=54.0958889,-0.2023889&travelmode=driving" target="_blank">Brid</a>, 
+            <a href="https://www.google.com/maps/dir/?api=1&amp;origin=DY11+7LD&amp;destination=HR6+8UQ&amp;travelmode=driving" target="_blank">Leom</a>], 
+        <a href="https://news.google.co.uk/" target="_blank">News</a>, 
+        <a href="http://photos.google.com" target="_blank">Photos</a>) |
     <a href="https://gpx.studio/" target="_blank">GPX Studio</a>
   </p>
   <p>
@@ -115,9 +115,9 @@
     <a href="http://forums.pigeonwatch.co.uk/forums/" target="_blank">Pigeon Watch</a> |
     <a href="https://thepiratebay.org" target="_blank">Pirate Bay</a> |
     <a href="http://www.planetf1.com" target="_blank">Planet F1</a> |
-    <a href="http://192.168.1.119:32400/" target="_blank">Plex</a> | Plusnet (
-    <a href="http://webmail.plus.net/" target="_blank">Web Mail</a>,
-    <a href="https://www.plus.net/view_my_broadband_usage/" target="_blank">Usage</a>) |
+    <a href="http://192.168.1.119:32400/" target="_blank">Plex</a> | Plusnet 
+        (<a href="http://webmail.plus.net/" target="_blank">Web Mail</a>,
+        <a href="https://www.plus.net/view_my_broadband_usage/" target="_blank">Usage</a>) |
     <a href="http://postimage.org/" target="_blank">Post Image</a> |
     <a href="https://www.p2snetwork.co.uk/" target="_blank">P2S</a>
   </p>
@@ -126,9 +126,9 @@
     <a href="http://www.bbc.co.uk/radio/player/bbc_radio_four/" target="_blank">Radio 4</a> | 
     <a href="https://www.random.org/passwords/" target="_blank">Random.org</a> | 
     <a href="http://raspbmc/" target="_blank">Raspberry Pi</a> | 
-    <a href="https://www.reddit.com" target="_blank">reddit</a> (
-    <a href="https://www.reddit.com/r/all" target="_blank">all</a> |
-    <a href="https://www.reddit.com/r/popular" target="_blank">popular</a> )
+    <a href="https://www.reddit.com" target="_blank">reddit</a> 
+        (<a href="https://www.reddit.com/r/all" target="_blank">all</a> |
+        <a href="https://www.reddit.com/r/popular" target="_blank">popular</a> )
   </p>
   <p>
     <a href="https://www.skysports.com/f1/schedule-results" target="_blank">sky f1 schedule</a> | 
@@ -144,12 +144,12 @@
     <a href="https://twitter.com/search-home" target="_blank">Twitter Search</a>
   </p>
   <p>
-    <a href="http://www.uk-preppers.co.uk/" target="_blank">UKP</a> (
-    <a href="http://www.uk-preppers.co.uk/forum/search.php?search_id=newposts&amp;sid=91e7511cd00ede4b33922e0ec1e2fa0a" target="_blank">new</a> |
-    <a href="https://www.google.com/search?as_sitesearch=www.uk-preppers.co.uk/forum" target="_blank">search</a>)
+    <a href="http://www.uk-preppers.co.uk/" target="_blank">UKP</a> 
+        (<a href="http://www.uk-preppers.co.uk/forum/search.php?search_id=newposts&amp;sid=91e7511cd00ede4b33922e0ec1e2fa0a" target="_blank">new</a> |
+        <a href="https://www.google.com/search?as_sitesearch=www.uk-preppers.co.uk/forum" target="_blank">search</a>)
   </p>
   <p>
-    <a href="https://www.radiotimes.com/tv/tv-listings/" target="_blank">Radio Times</a> (
+    <a href="https://www.radiotimes.com/tv/tv-listings/" target="_blank">Radio Times</a>
   </p>
   <p>
     <a href="http://www.wikipedia.org" target="_blank">Wikipedia</a>
