--- a/links.html
+++ b/links.html
@@ -124,6 +124,7 @@
   <p>
     <a href="https://www.racefans.net/" target="_blank">RaceFans</a> | 
     <a href="http://www.bbc.co.uk/radio/player/bbc_radio_four/" target="_blank">Radio 4</a> | 
+    <a href="https://www.radiotimes.com/tv/tv-listings/" target="_blank">Radio Times</a> |
     <a href="https://www.random.org/passwords/" target="_blank">Random.org</a> | 
     <a href="http://raspbmc/" target="_blank">Raspberry Pi</a> | 
     <a href="https://www.reddit.com" target="_blank">reddit</a> 
@@ -147,9 +148,6 @@
     <a href="http://www.uk-preppers.co.uk/" target="_blank">UKP</a> 
         (<a href="http://www.uk-preppers.co.uk/forum/search.php?search_id=newposts&amp;sid=91e7511cd00ede4b33922e0ec1e2fa0a" target="_blank">new</a> |
         <a href="https://www.google.com/search?as_sitesearch=www.uk-preppers.co.uk/forum" target="_blank">search</a>)
-  </p>
-  <p>
-    <a href="https://www.radiotimes.com/tv/tv-listings/" target="_blank">Radio Times</a>
   </p>
   <p>
     <a href="http://www.wikipedia.org" target="_blank">Wikipedia</a>
