--- a/links.html
+++ b/links.html
@@ -40,8 +40,7 @@
     <a href="https://www.bbc.co.uk/iplayer/live/bbcnews" target="_blank">BBC News 24</a> |
     <a href="https://www.bbc.co.uk/weather" target="_blank">BBC Weather</a> |
     <a href="http://geomag.bgs.ac.uk/data_service/space_weather/Global_activity_now.html" target="_blank">BGS Weather</a> |
-    <a href="http://www.bing.com/maps/" target="_blank">Bing Maps</a> |
-    <a href="http://www.bulb.co.uk" target="_blank">Bulb</a>
+    <a href="http://www.bing.com/maps/" target="_blank">Bing Maps</a>
   </p>
   <p>
     <a href="http://www.caterallen.co.uk/" target="_blank">Cater Allen</a> |
@@ -76,7 +75,6 @@
         <a href="https://keep.google.com" target="_blank">Keep</a>, 
         <a href="http://maps.google.co.uk" target="_blank">Maps</a> 
             [<a href="https://www.google.com/maps/dir/?api=1&amp;origin=DY11+7LD&amp;destination=GL51+6SX&amp;travelmode=driving" target="_blank">Stav</a>, 
-            <a href="https://www.google.com/maps/dir/?api=1&origin=DY11+7LD&destination=OX18+3FX&travelmode=driving" target="_blank">Cart</a>, 
             <a href="https://www.google.com/maps/dir/?api=1&origin=DY11+7LD&destination=54.0958889,-0.2023889&travelmode=driving" target="_blank">Brid</a>, 
             <a href="https://www.google.com/maps/dir/?api=1&amp;origin=DY11+7LD&amp;destination=HR6+8UQ&amp;travelmode=driving" target="_blank">Leom</a>], 
         <a href="https://news.google.co.uk/" target="_blank">News</a>, 
@@ -110,12 +108,15 @@
     <a href="https://nextdoor.co.uk/" target="_blank">Next Door</a>
   </p>
   <p>
+    <a href="https://octopus.energy/" target="_blank">Octopus</a>
+  </p>
+  <p>
     <a href="https://pastebin.com/sEksDDEy" target="_blank">Pastebin</a> | 
     <a href="http://www.pdfmerge.com/" target="_blank">PDF Merge</a> |
     <a href="http://forums.pigeonwatch.co.uk/forums/" target="_blank">Pigeon Watch</a> |
     <a href="https://thepiratebay.org" target="_blank">Pirate Bay</a> |
     <a href="http://www.planetf1.com" target="_blank">Planet F1</a> |
-    <a href="http://192.168.1.119:32400/" target="_blank">Plex</a> | Plusnet 
+    <a href="http://192.168.1.223:32400/" target="_blank">Plex</a> | Plusnet 
         (<a href="http://webmail.plus.net/" target="_blank">Web Mail</a>,
         <a href="https://www.plus.net/view_my_broadband_usage/" target="_blank">Usage</a>) |
     <a href="http://postimage.org/" target="_blank">Post Image</a> |
