--- a/links.html
+++ b/links.html
@@ -33,7 +33,8 @@
   </p>
   <p>
     <a href="https://www.amazon.co.uk/" target="_blank">Amazon</a><span style="background-color:transparent"> | 
-    <a href="http://www.autosport.com/f1/ target="_blank">Autosport - F1</a>
+    <a href="archive.today" target="_blank">Archive Today</a>
+    <a href="http://www.autosport.com/f1/" target="_blank">Autosport - F1</a>
   </p>
   <p>
     <a href="http://www.bbc.co.uk/news" target="_blank">BBC News</a> |
