--- a/links.html
+++ b/links.html
@@ -33,7 +33,7 @@
   </p>
   <p>
     <a href="https://www.amazon.co.uk/" target="_blank">Amazon</a><span style="background-color:transparent"> | 
-    <a href="archive.today" target="_blank">Archive Today</a>
+    <a href="https://archive.today" target="_blank">Archive Today</a> [<a href="https://archive.ph/FOVBx" target="_blank">ns</a>]
     <a href="http://www.autosport.com/f1/" target="_blank">Autosport - F1</a>
   </p>
   <p>
