--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
+
 <html>
 <head>
-  <title></title>
+  <title>Steve63</title>
+  <style>
+    .page_div {
+      margin-top: 25px;
+      margin-bottom: 25px;
+      margin-left: auto;
+      margin-right: auto;
+      width:500px;
+    }
+    h1 {
+      font-family: Arial;
+      color:#444444;
+    }
+    h2 {
+      font-family: Arial;
+      color:#444444;
+    }
+    p {
+      font-size: 100%;
+      font-family: Arial;
+      color:#444444;
+    }
+    td {
+      border: 1px solid #e0e0e0;
+      padding: 15px;
+    }
+    button {
+      border: none;
+      background-color: white;
+    }
+    button:hover {
+      background-color: #c0c0c0;
+    }
+    .footer {
+      font-size: 60%;
+      text-align:center;
+      margin: 3px;
+    }
+  </style>
 </head>
 <body>
-404
+  <div class="page_div">
+    <p>404</p>
+    <hr>
+    <p class="footer">Copyright © 2025 Steve63</p>
+  <div>
 </body>
 </html>
